--- a/index.html
+++ b/index.html
@@ -21,13 +21,21 @@
 	<body class="bg-white">
 		<header class="mx-10">
 			<nav class="flex justify-between py-3 items-center">
-				<div class="logo capitalize font-bold text-3xl">News Time</div>
+				<div class="logo capitalize font-bold text-3xl">
+					<span class="bg-blue-800 text-white px-2 rounded-lg">News</span> Time
+				</div>
 				<ul class="list-none flex capitalize text-xl font-semibold">
 					<li class="mx-5"><a href="#">News</a></li>
 					<li class=""><a href="#">Blog</a></li>
 				</ul>
 			</nav>
 			<hr class="" />
+			<ul
+				class="flex flex-wrap items-center justify-between my-5"
+				id="sub-nav"
+			></ul>
 		</header>
+		<!--  JS -->
+		<script src="./app.js"></script>
 	</body>
 </html>
