--- a/blog.html
+++ b/blog.html
@@ -39,5 +39,40 @@
 				id="sub-nav"
 			></ul>
 		</header>
+		<main>
+			<section class="mx-10">
+				<div class="blog">
+					<h1 class="text-3xl font-semibold mb-3">
+						Difference between var, let and const keywords in JavaScript
+					</h1>
+					<hr />
+					<p class="text-xl">
+						In JavaScript, users can declare a variable using 3 keywords that
+						are var, let, and const. In this article, we will see the
+						differences between the var, let, and const keywords. We will
+						discuss the scope and other required concepts about each keyword.
+					</p>
+					<p class="text-xl mt-2">
+						<strong> var </strong>
+						keyword in JavaScript: The var is the oldest keyword to declare a
+						variable in JavaScript.The scope of the var keyword is the global
+					</p>
+
+					<p class="text-xl mt-2">
+						<strong> let </strong>
+						keyword in JavaScript: The let keyword is an improved version of the
+						var keyword. The scope of a let variable is only block scoped. It
+						can’t be accessible outside the particular block ({block})
+					</p>
+
+					<p class="text-xl mt-2">
+						<strong> const </strong>
+						keyword in JavaScript: The const keyword has all the properties that
+						are the same as the let keyword, except the user cannot update
+						it.The user cannot update the const variable once it is declared.
+					</p>
+				</div>
+			</section>
+		</main>
 	</body>
 </html>
