added blog-4 and sorted the data with total view

--- a/blog.html
+++ b/blog.html
@@ -42,11 +42,11 @@
 		<main>
 			<section class="mx-10">
 				<div class="blog">
-					<h1 class="text-3xl font-semibold mb-3">
+					<h1 class="text-3xl font-semibold mb-3 text-blue-800">
 						Difference between var, let and const keywords in JavaScript
 					</h1>
 					<hr />
-					<p class="text-xl">
+					<p class="text-xl mt-2">
 						In JavaScript, users can declare a variable using 3 keywords that
 						are var, let, and const. In this article, we will see the
 						differences between the var, let, and const keywords. We will
@@ -73,7 +73,7 @@
 					</p>
 				</div>
 				<div>
-					<h1 class="text-3xl mb-3 mt-5 font-semibold">
+					<h1 class="text-3xl mb-3 mt-5 font-semibold text-blue-800">
 						Difference between regular functions and arrow functions
 					</h1>
 					<hr />
@@ -102,7 +102,7 @@
 					</p>
 				</div>
 				<div>
-					<h1 class="text-3xl mb-2 font-semibold">
+					<h1 class="text-3xl mb-2 font-semibold text-blue-800">
 						Template literals (Template strings)
 					</h1>
 					<hr />
@@ -120,6 +120,48 @@
 						with a custom tag function to perform whatever operations you want
 						on the different parts of the template literal.
 					</p>
+				</div>
+				<div>
+					<h1 class="text-3xl font-semibold mb-2 mt-5 text-blue-800">
+						What are the differences between map,filter,ForEach and find?
+					</h1>
+
+					<p class="text-xl mt-2">
+            <ul class="text-xl" >
+              <h1 class="font-semibold">Map:</h1>
+              <li>map() creates a new array from calling a function for every array element.
+                </li>
+                <li>map() does not execute the function for empty elements.</li>
+                <li>map() does not change the original array.</li>
+                <li>   map() calls a function once for each element in an array.</li>
+            </ul>
+          </p>
+					<p class="text-xl mt-2">
+            <ul class="text-xl" >
+              <h1 class="font-semibold">Filter:</h1>
+              <li>The filter() method creates a new array filled with elements that pass a test provided by a function.
+                </li>
+                <li>The filter() method does not execute the function for empty elements.</li>
+                <li>The filter() method does not change the original array.</li>
+            </ul>
+          </p>
+					<p class="text-xl mt-2">
+            <ul class="text-xl" >
+              <h1 class="font-semibold">forEach:</h1>
+              <li>The forEach() method calls a function for each element in an array.
+                </li>
+                <li>The forEach() method is not executed for empty elements.</li>
+            </ul>
+          </p>
+					<p class="text-xl mt-2">
+            <ul class="text-xl" >
+              <h1 class="font-semibold">find:</h1>
+              <li>The find() method returns the value of the first element that passes a test.
+              </li>
+              <li>The find() method executes a function for each array element.</li>
+              <li>The find() method returns undefined if no elements are found.</li>
+              </ul>
+          </p>
 				</div>
 			</section>
 		</main>
