--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
 				<div id="news"></div>
 			</section>
 		</main>
+
+		<footer class="mx-10 mt-10 py-10 bg-blue-800">
+			<p class="text-center text-xl text-white">Copyright 2023 News Time</p>
+		</footer>
 		<script src="./app.js"></script>
 	</body>
 </html>
