added extra work

--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
 		</main>
 
 		<footer class="mx-10 mt-10 py-10 bg-blue-800">
-			<p class="text-center text-xl text-white">Copyright 2023 News Time</p>
+			<p
+				class="text-center md:text-xl lg:text-xl sm:text-xl text-base text-white"
+			>
+				Copyright 2023 News Time
+			</p>
 		</footer>
 		<script src="./app.js"></script>
 	</body>
