--- a/blog.html
+++ b/blog.html
@@ -165,5 +165,12 @@
 				</div>
 			</section>
 		</main>
+    <footer class="mx-10 mt-10 py-10 bg-blue-800">
+			<p
+				class="text-center md:text-xl lg:text-xl sm:text-xl text-base text-white"
+			>
+				Copyright 2023 News Time
+			</p>
+		</footer>
 	</body>
 </html>
