added rounded to footer

--- a/blog.html
+++ b/blog.html
@@ -165,7 +165,7 @@
 				</div>
 			</section>
 		</main>
-    <footer class="mx-10 mt-10 py-10 bg-blue-800">
+    <footer class="mx-10 mt-10 py-10 bg-blue-800 rounded">
 			<p
 				class="text-center md:text-xl lg:text-xl sm:text-xl text-base text-white"
 			>
