--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			</section>
 		</main>
 
-		<footer class="mx-10 mt-10 py-10 bg-blue-800">
+		<footer class="mx-10 mt-10 py-10 bg-blue-800 rounded">
 			<p
 				class="text-center md:text-xl lg:text-xl sm:text-xl text-base text-white"
 			>
